# nocode-form-builder

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: form_agent.py  form_graph.py  shared.py
frontend/: app.py
templates/: loan_application.json  loan_application.yaml  my_template.json
tests/: conftest.py  test_form_agent.py  test_form_graph.py
